rubocop/examples/good/Style_Attr.rb
# 'https://github.com/bbatsov/ruby-style-guide#attr'

# Avoid the use of attr. Use attr_reader and attr_accessor instead.

# good
attr_accessor :something
attr_reader :one, :two, :three
