rubocop/examples/bad/Style_CommentAnnotation.rb
# 'https://github.com/bbatsov/ruby-style-guide#annotate-keywords'

# TODO:The annotation keyword is followed by a colon and a space,
#   then a note describing the problem.
